<resources>
    <string name="app_name">BurgerShotApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="SignIn">Sign In</string>
    <string name="donthaveAccount">Dont have an account ? </string>
    <string name="signUp">Sign Up</string>
    <string name="alreadHaveAnAccount">Already Have an Account ? </string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="enter_email_for_password_reset">Enter Email for password Reset</string>
    <string name="signInWithGoogle">Sign In With Google</string>
    <string name="web_client_id">283761979759-eai3o1dec2e6fpbjt3g1l9m4bhq7sc1h.apps.googleusercontent.com</string>
    <string name="search_hint">Search</string>
    <string name="signOut">Sign out\n</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_id">Order ID</string>
    <string name="order_username">Username</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_title">Android\n</string>
    <string name="profile">Profile</string>
    <string name="locate_us">Locate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="in_stock">In Stock</string>
    <string name="add_cart">Add Cart\n</string>


</resources>