<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SingleProductViewActivity">


        <ImageView
            android:id="@+id/singleProductImageView"
            android:layout_width="384dp"
            android:layout_height="354dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <!--        <LinearLayout-->
        <!--            android:id="@+id/linearLayout2"-->
        <!--            android:layout_width="409dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:orientation="horizontal"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/singleProductImageView">-->

        <!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="365dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/Description"
                android:layout_width="247dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="Description"
                android:textSize="16sp"
                android:textStyle="bold"

                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/description_details"
                android:layout_width="match_parent"
                android:layout_height="174dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="start"
                android:text="of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum." />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"

                    android:text="TextView"
                    android:textSize="20sp"
                    android:textStyle="bold"


                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

                <Button
                    android:id="@+id/buy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/buy_now"
                    android:backgroundTint="@color/app_black"
                    />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/addToCart"
                    android:layout_width="91dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add_cart" />

            </LinearLayout>

        </LinearLayout>

<!--        <Button-->
<!--            android:id="@+id/removeQty"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:text="-"-->
<!--            tools:layout_editor_absoluteX="1dp"-->
<!--            tools:layout_editor_absoluteY="578dp" />-->

<!--        <Button-->
<!--            android:id="@+id/addQtyPlusBtn"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="+"-->
<!--            tools:layout_editor_absoluteX="112dp"-->
<!--            tools:layout_editor_absoluteY="587dp" />-->

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/singleProductImageView">

            <TextView
                android:id="@+id/productTitle"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:gravity="start"
                android:text="Title"
                android:textStyle="bold"
                android:textSize="18sp"
                />

            <ImageView
                android:id="@+id/addTowishList"
                android:layout_width="27dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/baseline_favorite_24_for_bottom_navigation" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:text="@string/in_stock" />

            <TextView
                android:id="@+id/availableQty"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="TextView" />

            <ImageView
                android:id="@+id/removeQty"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/baseline_remove_circle_outline_24" />

            <TextView
                android:id="@+id/QtyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="1" />

            <ImageView
                android:id="@+id/addQtyPlusBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                app:srcCompat="@drawable/baseline_add_circle_outline_24" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>